[package]
name = "planner_cli"
version = "0.0.1"
authors = ["David Reese <dcr54@uakron.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "3.0", features = ["cargo"] }
rusqlite = "0.31.0"
